--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ dependencies {
 	}
 	testImplementation 'org.springframework.security:spring-security-test'
 	implementation 'com.auth0:java-jwt:3.10.0'
+	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
+
 }
 
 test {
