--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,8 @@ jwt.secret='qazWSX1@'
 
 server.port=8081
 
+server.error.whitelabel.enabled=false
+
 spring.datasource.url=jdbc:mysql://localhost:3306/supportportal
 spring.datasource.username=root
 spring.datasource.password=qazWSX1@
@@ -9,3 +11,6 @@ spring.datasource.password=qazWSX1@
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+#spring.mvc.throw-exception-if-no-handler-found=true
+#spring.resources.add-mappings=false
