--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	implementation 'com.auth0:java-jwt:3.10.0'
 	compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
 	compile group: 'com.google.guava', name: 'guava', version: '28.1-jre'
+	compile group: 'javax.mail', name: 'javax.mail-api', version: '1.6.2'
 
 }
 
